# autoxecuter

./: README.md  a.out  autoxecuter.py  install  run  setup.cfg  shell_command  uninstall
src/: autoxecuter.py
src/autoxecuter_nhrDev.egg-info/: PKG-INFO  SOURCES.txt
