[metadata]
name = autoxecuter-nhrDev
version = 1.0.0
author = Nowshad Hossain Rahat
author_email = nowshad.hossain.rahat@gmail.com
description = This script will continously be executing any program file whenever the content of the source file will be changed.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nowshad-hossain-rahat/autoxecuter
project_urls =
    Bug Tracker = https://github.com/nowshad-hossain-rahat/autoxecuter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
